turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:2: error: not found: value ?
  for (k<- ? to 3)
           ^