turtleart.housetree.HouseTree.scala.code
override def run() {
  for (k<- ? to 3)
  {
    faireMaison()
    droite(90)
    avance(50)
    gauche(90)
  }
}

def triangle()
{
  droite(30)
  for(k<- 0 to 2)
  {
    avance(30)
    droite(120)
  }
}

def faireMaison()
{
for (k <- 0 to 3)
  {
    avance(30)
    if (k == 0)
   	{
      triangle()
      gauche(30)
    }
    droite(90)
	}
}